# Server

./: .clang-format  .gitignore  CMakeLists.txt  bebraSchem.drawio  gitInstruction.txt
resources/textures/: Thumbs.db
sources/: patchnotes.txt  sources.cmake
sources/main/: main.cpp  main_sources.cmake
